--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
 version: '3'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.3.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
       - "2181:2181"
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.3.0
     depends_on:
       - zookeeper
     environment:
+      # Обязательные переменные для Kafka 3.0+
+      KAFKA_PROCESS_ROLES: "broker"  # <-- КРИТИЧЕСКИ ВАЖНО
+      KAFKA_NODE_ID: 1               # <-- КРИТИЧЕСКИ ВАЖНО
+      
+      # Настройки для работы с Zookeeper
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      
+      # Дополнительные параметры для стабильности
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
     ports:
       - "9092:9092"
